- added notification on update

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="drawer_open">Menu opened</string>
     <string name="drawer_close">Menu closed</string>
 
-    <string name="parcel_name">Parcel Name</string>
+    <string name="parcel_name">Parcel Name (Optional)</string>
     <string name="parcel_tracking_number">Tracking Number</string>
 
     <string name="cancel">Cancel</string>
